// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots UI/Chip Default 1`] = `
<button
  class="bg-neutral chip pl-m pr-m"
>
  Ma chip 
  <span>
    x
  </span>
</button>
`;

exports[`Automated Storybook Snapshots UI/Chip With Color 1`] = `
<button
  class="bg-success chip pl-m pr-m"
>
  Ma chip 
  <span>
    x
  </span>
</button>
`;
